# libpam-pwdfile-rs

./: .gitignore  Cargo.toml  LICENSE  PKGBUILD  PkgBuilder.sh  README.md
src/: lib.rs
